一括削除のdocとcode修正
